# fcitx-kkc

./: CMakeLists.txt  Kkc.kdev4  config.h.in
data/: CMakeLists.txt
gui/: CMakeLists.txt  adddictdialog.cpp  adddictdialog.h  adddictdialog.ui  addshortcutdialog.cpp  addshortcutdialog.h  addshortcutdialog.ui  common.h  configwidget.cpp  configwidget.h  configwidget.ui  dictmodel.cpp  dictmodel.h  dictwidget.cpp  dictwidget.h  dictwidget.ui  main.cpp  main.h  rulemodel.cpp  rulemodel.h  shortcutmodel.cpp  shortcutmodel.h  shortcutwidget.cpp  shortcutwidget.h  shortcutwidget.ui
po/: CMakeLists.txt  ca.po  da.po  de.po  fcitx-kkc.pot  ja.po  ko.po  ru.po  tr.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  dictionary_list.in  fcitx-kkc.conf.in  fcitx-kkc.desc  fcitx-kkc.fxaddon  kkc-config.c  kkc-internal.h  kkc.c  kkc.conf.in  kkc.h
